# revoice-asr-tts

./: .gitignore  LICENSE  README.en.md  README.md  THIRD_PARTY_NOTICES.md  main.py  pyproject.toml
app/: __init__.py
app/core/: audio.py  config.py  logging.py  model_setup.py  paths.py  runtime.py
app/models/: __init__.py  asr.py  speech_to_speech.py  voice_clone.py
app/services/: __init__.py  asr.py  emotion_recognition.py  index_tts.py  speech_to_speech.py  voice_clone.py
doc/: release-v0.0.2.md
docs/: release-v0.0.3.md  release-v0.0.4.md
packaging/windows/: build-installer.ps1  build.ps1
ui/: app.py  logging_handler.py  main_window.py  theme.py  waveform_widget.py  window_chrome.py  workers.py
