[project]
name = "revoice-asr-tts"
version = "0.0.4"
description = "Real-time Voice Assistant powered by Qwen3 ASR and IndexTTS-2"
readme = "README.md"
requires-python = "==3.13.12"
dependencies = [
    "addict>=2.4.0",
    "editdistance",
    "funasr",
    "indextts",
    "loguru>=0.7.3",
    "ninja>=1.13.0",
    "protobuf",
    "PySide6>=6.9.1",
    "qwen-asr==0.0.6",
    "safetensors>=0.5.0",
    "sentencepiece>=0.2.1",
    "simplejson",
    "sortedcontainers",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "torch==2.11.0",
    "torchaudio==2.11.0",
    "torchcodec>=0.14.0",
    "torchvision==0.26.0",
    "transformers>=4.51.0",
    "omegaconf",
    "librosa",
    "modelscope",
    "munch==4.0.0",
    "matplotlib>=3.8.0",
    "tqdm",
    "accelerate",
    "cn2an",
    "cython",
    "datasets",
    "descript-audiotools",
    "einops",
    "ffmpeg-python",
    "g2p-en",
    "hydra-core>=1.3.2",
    "jieba",
    "json5",
    "kaldiio>=2.17.0",
    "keras",
    "numba",
    "numpy",
    "opencv-python",
    "pandas",
    "tensorboard",
    "textstat",
    "torch-complex",
    "requests",
    "wetext; sys_platform != 'linux'",
    "WeTextProcessing; sys_platform == 'linux'",
    "onnxruntime>=1.26.0",
    "gguf>=0.19.0",
    "llama-cpp-python>=0.3.31",
    "srt>=3.5.3",
    "triton-windows==3.6.0.post26",
    "flash-attn",
    "nuitka[all]>=4.1.3",
    "gradio>=6.17.3",
]


[tool.uv]
package = false


[tool.uv.sources]
editdistance = { path = "vendor/editdistance-shim", editable = true }
indextts = { path = "vendor/index-tts", editable = true }
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
flash-attn = { path = "bin/flash_attn/flash_attn-2.8.3+cu128torch2.11-cp313-cp313-win_amd64.whl" }


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
